--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        
+        
 
     </head>
     <body>        
@@ -29,7 +31,7 @@
                     <div class=" col-xs-7">
                         <div class="row">
                             <div class="showRow col-12">
-                                <label class="showInput">> </label>    
+                                <label id="showInput" class="showInput"> </label>    
                             </div>                             
                         </div>
                         <div class="row">
@@ -147,6 +149,7 @@
                 </div>
             </div>            
         </div> 
+        <script src="bignumber.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
