--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                     <div class=" col-xs-7">
                         <div class="row">
                             <div class="showRow col-12">
-                                <button class="scrollLabel" id="scrollLeft"><</button>
-                                <label id="showInput" class="showInput"> </label>    
+                                <button class="scrollLabel" id="scrollLeft">&#171</button>
+                                <label id="showInput" class="showInput"> </label>
+                                <button class="scrollLabel" id="scrollRight">&#187</button>
                             </div>                             
                         </div>
                         <div class="row">
@@ -59,7 +60,7 @@
                                 <button class="btn-type-3" value="sqrt">&#8730</button>    
                             </div>  
                             <div class="col-xs-2">
-                                <button class="btn-type-9" value="percent">%</button>    
+                                <button class="btn-type-3" value="percent">%</button>    
                             </div>  
                         </div>
                         <div class="row buttonrows">
@@ -144,8 +145,15 @@
                     <div class="col-xs-5">
                         <div class="calcHistory col-lg-12">
                             <label>Calculation History</label>
-                            <textarea class="txtAreaHistory" placeholder="No history yet" disabled></textarea>    
-                        </div>    
+                            <textarea id="txtAreaHistory" class="txtAreaHistory" placeholder="No history yet" disabled></textarea> 
+                            
+                        </div>
+                        <div class="calcHistory col-lg-10">
+                            
+                        </div>
+                        <div class="calcHistory col-lg-2">
+                          <button id="clearHistory" title="Clear Calculation History" class="clearHistory"> Clear </button>  
+                        </div>
                     </div>
                 </div>
             </div>            
